# tech-news-rag

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: pipeline_ci.yml
ai_news_bot/: .env.example  Makefile  README.md  logging.yaml  pyproject.toml
ai_news_bot/ai_news_bot/: __init__.py  base.py  chains.py  constants.py  embeddings.py  langchain_bot.py  models.py  utils.py
ai_news_bot/tests/: test_embeddings.py  test_qdrant.py  test_template.py
ai_news_bot/tools/: bot.py  ui.py
data_pipeline/: .env.example  Makefile  README.md  pyproject.toml
data_pipeline/data_pipeline/: assets.py  constants.py  database.py  definitions.py  embeddings.py  schemas.py  sources.py
data_pipeline/deploy/: Dockerfile  dagster.yaml  entrypoint.sh  to_ecr.sh
training_pipeline/: .env.example  Makefile  README.md  beamignore.txt  pyproject.toml
training_pipeline/configs/: inference_config.yaml  training_config.yaml
training_pipeline/tools/: inference_beam.py  inference_run.py  train_beam.py  train_run.py
training_pipeline/training_pipeline/: __init__.py  configs.py  constants.py  models.py
training_pipeline/training_pipeline/api/: inference.py  training.py
training_pipeline/training_pipeline/data/: qa_data.py  utils.py
training_pipeline/training_pipeline/prompt_templates/: prompter.py
